--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    </head>
+  <head>
     <title>Random Title</title>
   </head>
   <body>
@@ -22,5 +24,10 @@
         <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
       <i class="material-icons">add</i>
     </button>
+  </body>
+  <body>
+    <body>
+ <p>This text contains <sup>superscript</sup> text.</p>
+    </body>
   </body>
 </html>
