--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Random Title</title>
   </head>
   <body>
+    <h1 id="myHeader">Header</h1>
     <h1>Header</h1>
     <form action="#">
       <div class="mdl-textfield mdl-js-textfield">
