--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Random Title</title>
   </head>
   <body>
+  <head>
     <h1 id="myHeader">Header</h1>
-    <h1>Header</h1>
-    <form action="#">
+  </head>
+  <form action="#">
       <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input" type="text" id="sample1">
         <label class="mdl-textfield__label" for="sample1">Text...</label>
