--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Random Title</title>
   </head>
   <body>
-    <h1 id="myHeader">Header</h1>
+   <h1>Random Header</h1>
   <form action="#">
       <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input" type="text" id="sample1">
